# sqliteman

./: README.md
Packagers/: sqliteman.nsi  sqliteman.spec
Sqliteman/: .gdbinit  CMakeLists.txt  COPYING  README
Sqliteman/cmake/modules/: FindQScintilla.cmake  QtMacros.cmake
Sqliteman/sqliteman/: CMakeLists.txt  altertabledialog.cpp  altertabledialog.h  altertriggerdialog.cpp  altertriggerdialog.h  alterviewdialog.cpp  alterviewdialog.h  alterviewdialog.ui  analyzedialog.cpp  analyzedialog.ui  blobpreviewwidget.cpp  constraintsdialog.cpp  constraintsdialog.h  createindexdialog.cpp  createindexdialog.h  createtabledialog.cpp  createtabledialog.h  createtriggerdialog.cpp  createtriggerdialog.h  createviewdialog.cpp  createviewdialog.h  database.cpp  database.h  dataexportdialog.cpp  dataexportdialog.h  dataviewer.cpp  dataviewer.h  dataviewer.ui  dialogcommon.cpp  dialogcommon.h  extensionmodel.cpp  extensionmodel.h  finddialog.cpp  finddialog.h  finddialog.ui  getcolumnlist.cpp  getcolumnlist.h  helpbrowser.cpp  importtabledialog.cpp  importtabledialog.ui  (+56 more)
Sqliteman/sqliteman/doc/: CMakeLists.txt  doc.qrc
Sqliteman/sqliteman/doc/en/: AlterTable.html  Attached.html  Compilation.html  Configuration.html  ConstraintTriggers.html  ContextMenu.html  CreateIndex.html  CreateTable.html  CreateView.html  Credits.html  DataViewer.html  DatabaseMenu.html  DefaultValues.html  Export.html  FeaturesDialogs.html  FileMenu.html  Find.html  HelpMenu.html  ImportTable.html  Installation.html  Introduction.html  Issues.html  Licence.html  MainWindow.html  MenuStructure.html  Overview.html  PopulateTable.html  QueryBuilder.html  Questions.html  Requirements.html  SQLeditor.html  SchemaBrowser.html  Starting.html  SystemMenu.html  TransactionModes.html  UserDefinedFunctions.html  apa.html  apas02.html  apas04.html  apb.html  (+28 more)
Sqliteman/sqliteman/driver/: qsql_sqlite.cpp
Sqliteman/sqliteman/extensions/: uuid.c
Sqliteman/sqliteman/icons/: CMakeLists.txt  icons.qrc
Sqliteman/sqliteman/qscintilla2/Qt4/: ListBoxQt.h  PlatQt.cpp  SciClasses.cpp  SciClasses.h  ScintillaQt.cpp  ScintillaQt.h  qsciapis.cpp  qscicommand.cpp  qscicommandset.cpp  qscilexer.cpp  qscilexerbash.cpp  qscilexerbatch.cpp  qscilexercmake.cpp  qscilexercpp.cpp  qscilexercss.cpp  qscilexerd.cpp  qscilexerdiff.cpp  qscilexerfortran.cpp  qscilexerfortran77.cpp  qscilexerhtml.cpp  qscilexerlua.cpp  qscilexerpascal.cpp  qscilexerperl.cpp  qscilexerpostscript.cpp  qscilexerpov.cpp  qscilexerproperties.cpp  qscilexerpython.cpp  qscilexersql.cpp  qscilexertcl.cpp  qscilexerverilog.cpp  qscilexervhdl.cpp  qscilexerxml.cpp  qscilexeryaml.cpp  qscimacro.cpp  qsciprinter.cpp  qsciscintilla.cpp  qsciscintillabase.cpp
Sqliteman/sqliteman/qscintilla2/Qt4/Qsci/: qsciabstractapis.h  qsciapis.h  qscicommand.h  qscicommandset.h  qsciglobal.h  qscilexer.h  qscilexerbash.h  qscilexerbatch.h  qscilexercmake.h  qscilexercpp.h  qscilexercsharp.h  qscilexercss.h  qscilexerd.h  qscilexerdiff.h  qscilexerfortran.h  qscilexerfortran77.h  qscilexerhtml.h  qscilexeridl.h  qscilexerjava.h  qscilexerjavascript.h  qscilexerlua.h  qscilexermakefile.h  qscilexerpascal.h  qscilexerperl.h  qscilexerpostscript.h  qscilexerpov.h  qscilexerproperties.h  qscilexerpython.h  qscilexerruby.h  qscilexerspice.h  qscilexersql.h  qscilexertcl.h  qscilexertex.h  qscilexerverilog.h  qscilexervhdl.h  qscilexerxml.h  qscilexeryaml.h  qscimacro.h  qsciscintilla.h  qsciscintillabase.h  (+2 more)
Sqliteman/sqliteman/qscintilla2/include/: Platform.h
Sqliteman/sqliteman/qscintilla2/src/: ExternalLexer.h
Sqliteman/sqliteman/sqlparser/: tosqlparse.cpp  tosqlparse.h
Sqliteman/sqliteman/ts/: CMakeLists.txt
